--- a/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
+++ b/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
@@ -17,9 +17,46 @@
       },
       "source": [
         "# Statistical Physics Review \n",
-        "## (or a whirl wind introduction)\n",
+        "### (A whirl wind introduction)\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "<div class=\"alert alert-warning\">\n",
+        "    \n",
+        "**Basic Principle:** In an *isolated* system, all *allowed* *microstates* are equally likely.\n",
+        "    \n",
+        "</div>\n"
+      ],
+      "metadata": {
+        "id": "HMKnKeDn2EVq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Notes:**\n",
+        "* An \"isolated\" system does not exchange energy, particles, volume or other conserved quantities with the outside world. (Biological systems are typically open systems)\n",
+        "* A \"microstate\" (in classical physics) is a specific microscopic configuration of all particles of the system.\n",
+        "* All \"allowed\" microstates have the same energy, volume and number (and type) of particles.\n"
+      ],
+      "metadata": {
+        "id": "P40p-MSr3O4s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Suppose the number of microstate $\\nu$ with $E_\\nu=E$, $V_\\nu=V$ and $N_\\nu=N$ is $\\Omega(E,V,N)$.\n",
+        "\n",
+        "Then, based on our \"Basic Principle\", we can say that the probability of observing microstate $\\nu$ is given by $P(\\nu)=\\Omega(E,V,N)^{-1}$."
+      ],
+      "metadata": {
+        "id": "8dl5NfUI57_K"
+      }
     },
     {
       "cell_type": "markdown",
