--- a/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
+++ b/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
@@ -35,12 +35,21 @@
       "cell_type": "markdown",
       "source": [
         "**Notes:**\n",
-        "* An \"isolated\" system does not exchange energy, particles, volume or other conserved quantities with the outside world. (Biological systems are typically open systems)\n",
+        "* An \"isolated\" system does not transfer energy, matter, volume or other conserved quantities outside its boundaries. A \"closed\" system can exchange energy, but not matter. \"Open\" systems typically exchange energy, matter and volume. Example: Biological systems (cells, organisms).\n",
         "* In classical physics (=all we care about in this course), a \"microstate\" is a specific microscopic configuration of all particles of the system.\n",
         "* All \"allowed\" microstates have the same energy, volume and number (and type) of particles.\n"
       ],
       "metadata": {
         "id": "P40p-MSr3O4s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<img src=\"https://github.com/Hallatscheklab/SoftMatter22-23/blob/main/source/notebooks/L1/img/trail-of-bright-light-in-box-460688633-5966b3605f9b5816183316bb.webp?raw=1\" alt=\"systems\" name=\"systems\" class=\"bg-primary mb-1\" width=\"500px\">"
+      ],
+      "metadata": {
+        "id": "iLSWV3dYcbnF"
       }
     },
     {
