--- a/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
+++ b/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
@@ -34,7 +34,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Notes:**\n",
         "* An \"isolated\" system does not transfer energy, matter, volume or other conserved quantities outside its boundaries. A \"closed\" system can exchange energy, but not matter. \"Open\" systems typically exchange energy, matter and volume. Example: Biological systems (cells, organisms).\n",
         "* In classical physics (=all we care about in this course), a \"microstate\" is a specific microscopic configuration of all particles of the system.\n",
         "* All \"allowed\" microstates have the same energy, volume and number (and type) of particles.\n"
@@ -55,9 +54,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Suppose the number of microstates {$\\nu$} with $E_\\nu=E$, $V_\\nu=V$ and $N_\\nu=N$ is $\\Omega(E,V,N)$.\n",
+        "Let's define $\\Omega(E,V,N)$ to be the total number of microstates {$\\nu$} with $E_\\nu=E$, $V_\\nu=V$ and $N_\\nu=N$.\n",
         "\n",
-        "Then, based on our \"Basic Principle\", we can say that the probability of observing microstate $\\nu$ is given by $P(\\nu)=\\Omega(E,V,N)^{-1}$."
+        "Then, based on our \"Basic Principle\", we can say that the probability of observing microstate $\\nu$ is given by $P(\\nu)=\\Omega(E,V,N)^{-1}$.\n",
+        "\n",
+        "N.B.: One could imagine measuring $P(\\nu)$ in two ways. (i) Follow a given system for a very long time and determine the fraction of the total time the system is in microstate $\\nu$. (ii) Alternatively, we could consider a very large ensemble of identical systems and determine the fraction of replicates that are in state $\\nu$. We will usually assume that both types of measurements give the same results in the thermodynamic limit (long times and large ensembles). This is called the *ergodicity* assumption. The breaking of ergodicity is topic of active research. Ergodicity is broken in certain models of glasses it is broken, reflecting the long relaxation times in these systems."
       ],
       "metadata": {
         "id": "8dl5NfUI57_K"
