--- a/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
+++ b/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
@@ -16,8 +16,7 @@
         "id": "F3W6cUBQ0S-E"
       },
       "source": [
-        "# Statistical Physics Review \n",
-        "### (A whirl wind introduction)\n",
+        "# Whirlwind recap of statistical physics\n",
         "\n"
       ]
     },
@@ -58,10 +57,81 @@
         "\n",
         "Then, based on our \"Basic Principle\", we can say that the probability of observing microstate $\\nu$ is given by $P(\\nu)=\\Omega(E,V,N)^{-1}$.\n",
         "\n",
-        "N.B.: One could imagine measuring $P(\\nu)$ in two ways. (i) Follow a given system for a very long time and determine the fraction of the total time the system is in microstate $\\nu$. (ii) Alternatively, we could consider a very large ensemble of identical systems and determine the fraction of replicates that are in state $\\nu$. We will usually assume that both types of measurements give the same results in the thermodynamic limit (long times and large ensembles). This is called the *ergodicity* assumption. The breaking of ergodicity is topic of active research. Ergodicity is broken in certain models of glasses it is broken, reflecting the long relaxation times in these systems."
+        "N.B.: One could imagine measuring $P(\\nu)$ in two ways: 1. Follow a given system for a very long time and determine the fraction of the total time the system is in microstate $\\nu$. 2. Consider a very large ensemble of identical systems and determine the fraction of replicates that are in state $\\nu$. We will usually assume that both types of measurements give the same results in the thermodynamic limit (long times and large ensembles). This is called the *ergodicity* assumption. The breaking of ergodicity is topic of active research. Ergodicity is broken in certain models of glasses it is broken, reflecting the long relaxation times in these systems."
       ],
       "metadata": {
         "id": "8dl5NfUI57_K"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Energy exchange\n",
+        "\n",
+        "Most soft matter systems are closed but not isolated - they trade energy and volume with the environment (a.k.a. *bath*, *sorroundings*). What can we say about $P(\\nu_S)$ in those cases?"
+      ],
+      "metadata": {
+        "id": "Oa8wy2MzbAGP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "System (S) + Bath (B) = Composite system with fixed E, V, N.\n",
+        "\n",
+        "* All states with $E_S+E_B=E$ are equally likely.\n",
+        "* To reach a high energy state, S has to \"steal\" energy from B."
+      ],
+      "metadata": {
+        "id": "CwOgjx6gcIou"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "What's the probability $P(\\nu_S)$ of system state $\\nu_S$ irrespective of the state of the bath? "
+      ],
+      "metadata": {
+        "id": "maSb338UcsNd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$P(\\nu_S)=\\sum_{\\nu_B} P(\\nu_S,\\nu_B)=\\frac{\\Omega_b(E-E_S)}{\\Omega(E,V,N)}$$"
+      ],
+      "metadata": {
+        "id": "JNx94hvGc4df"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\\boxed{\\rightarrow P(\\nu_S)\\propto \\Omega_b(E-E_S)}$$\n",
+        "**The multiplicity of the bath controls the state of the system.**\n"
+      ],
+      "metadata": {
+        "id": "vuPxuGb_ezxc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Or, using the **Boltzmann entropy** $$ S\\equiv k_B \\ln \\Omega,$$\n",
+        "we can write $$P(\\nu_S)\\propto e^{k_B^{-1}S_B(E-E_S}$$."
+      ],
+      "metadata": {
+        "id": "oCe_sGpfhKHx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When the bath is very big (thermodynamic limit), we can Taylor expand the exponent,\n",
+        "$$ S_B(E-E_S)=S_B(E)+\\left(\\frac{\\partial S}{\\partial E}\\right)_{V,N}(-E_S)+\\cdots $$"
+      ],
+      "metadata": {
+        "id": "5Djwy4nzh5YD"
       }
     },
     {
