--- a/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
+++ b/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
@@ -118,7 +118,7 @@
       "cell_type": "markdown",
       "source": [
         "Or, using the **Boltzmann entropy** $$ S\\equiv k_B \\ln \\Omega,$$\n",
-        "we can write $$P(\\nu_S)\\propto e^{k_B^{-1}S_B(E-E_S}$$."
+        "we can write $$P(\\nu_S)\\propto e^{k_B^{-1}S_B(E-E_S)}.$$"
       ],
       "metadata": {
         "id": "oCe_sGpfhKHx"
@@ -132,6 +132,25 @@
       ],
       "metadata": {
         "id": "5Djwy4nzh5YD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Inserting above yields $$P(\\nu_S)\\propto \\exp\\left[\\text{const.}-k_B^{-1}\\left(\\frac{\\partial S_B}{\\partial E}\\right)_{V, N}\\right]\\propto e^{-b E_S} .$$"
+      ],
+      "metadata": {
+        "id": "XNZSNO8MmKnJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This is the **Boltzmann factor** $e^{-\\beta E_S}$, if we identify $b$ and $\\beta_B\\equiv (k_B T)^{-1}$. So,\n",
+        "$$\\beta_B\\equiv \\left(\\frac{\\partial \\ln \\Omega_B}{\\partial E}\\right)_{V, N}=\\frac 1k_B \\left(\\frac{\\partial S_B}{\\partial E}\\right)_{V, N}.$$"
+      ],
+      "metadata": {
+        "id": "d7P92EfznDKX"
       }
     },
     {
