--- a/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
+++ b/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
@@ -16,9 +16,31 @@
         "id": "F3W6cUBQ0S-E"
       },
       "source": [
-        "# Whirlwind recap of statistical physics\n",
+        "# Whirlwind recap of (equilibrium) statistical physics\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Why do we need statistical physics?**\n",
+        "* A typical property of soft matter systems is the importance of thermal fluctuations for structure and dynamics. “Soft” means often that the relevant energy scales are in order or smaller than $k_B T$.\n",
+        "* Rather than adopting well defined internal energy minima, the equilibrium states comprise a multitude of microstates, where fluctuations cause deviations from the internal energy minima.\n",
+        "* The description of this thermal equilibrium is the focus of equilibrium statistical physics, which we review in the first 2-3 lectures\n",
+        "* Note that living systems consume energy to stay away from thermal equilibrium. drive irreversible processes. It is active topic research how to extend statistical physics to describe systems far from equilibrium."
+      ],
+      "metadata": {
+        "id": "Yw2MINxWIF3f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Closed systems -- microcanonical ensemble"
+      ],
+      "metadata": {
+        "id": "DGMU9AklLj-G"
+      }
     },
     {
       "cell_type": "markdown",
@@ -66,7 +88,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Energy exchange\n",
+        "### Energy exchange -- canonical ensemble\n",
         "\n",
         "Most soft matter systems are closed but not isolated - they trade energy and volume with the environment (a.k.a. *bath*, *sorroundings*). What can we say about $P(\\nu_S)$ in those cases?"
       ],
