--- a/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
+++ b/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
@@ -168,11 +168,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is the **Boltzmann factor** $e^{-\\beta E_S}$, if we identify $b$ and $\\beta_B\\equiv (k_B T)^{-1}$. So,\n",
-        "$$\\beta_B\\equiv \\left(\\frac{\\partial \\ln \\Omega_B}{\\partial E}\\right)_{V, N}=\\frac 1k_B \\left(\\frac{\\partial S_B}{\\partial E}\\right)_{V, N}.$$"
+        "The factor $e^{-\\beta E_S}$ is the **Boltzmann factor**, if we identify $b$ and $\\beta_B\\equiv (k_B T)^{-1}$. \n",
+        "\n",
+        "Thus, $$\\beta_B\\equiv \\left(\\frac{\\partial \\ln \\Omega_B}{\\partial E}\\right)_{V, N}=\\frac 1k_B \\left(\\frac{\\partial S_B}{\\partial E}\\right)_{V, N}.$$\n",
+        "\n",
+        "Equivalently, $$\\boxed{T_B\\equiv \\left(\\frac{\\partial S_B}{\\partial E}\\right)_{V, N}^{-1}}$$ is the **thermodynamic definition** of the temperature of the bath."
       ],
       "metadata": {
         "id": "d7P92EfznDKX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Implication: The likelihood ratio of two microstates is given by the ratio of their Boltzmann factors**\n",
+        "$$\\frac{P(\\nu_s^{(1)})}{P(\\nu_s^{(2)})}=e^{-\\frac{E_S^{(2)}-E_S^{(1)}}{k_B T_b}}=e^{-\\frac{\\Delta E}{k_B T_b}}$$\n",
+        "\n",
+        "Exercise: Compare $k_B T$ with characteristic energy scales. \n",
+        "* E.g. potential energy differences due to gravity, $\\Delta E = m g h$, imply\n",
+        "  $$\\frac{P(\\nu_s^{(1)})}{P(\\nu_s^{(2)})}=e^{-\\frac{h}{\\lambda}}, \\qquad \\text{in terms of the \"scale height\"} \\lambda\\equiv \\frac{k_B T}{m g}\\approx 8 \\text{km}.$$\n",
+        "\n",
+        "* Bending of biopolymers\n",
+        "\n",
+        "* Electrostatic repulsion, $\\Delta E = \\frac{q^2}{4\\pi\\epsilon_0 \\ell_B}$\n"
+      ],
+      "metadata": {
+        "id": "b-3pU6kUSqqw"
       }
     },
     {
