--- a/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
+++ b/source/notebooks/L1/2_Intro_to_Stat_Phys_OH.ipynb
@@ -50,21 +50,14 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "**Basic principle of statistical mechanics:** In an *isolated* system, all *allowed* *microstates* are equally likely.\n"
-      ],
-      "metadata": {
-        "id": "HMKnKeDn2EVq"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "**Basic principle of statistical mechanics:** In an *isolated* system, all *allowed* *microstates* are equally likely.\n",
+        "\n",
         "* An \"isolated\" system does not transfer energy, matter, volume or other conserved quantities outside its boundaries. A \"closed\" system can exchange energy, but not matter. \"Open\" systems typically exchange energy, matter and volume. Example: Biological systems (cells, organisms).\n",
         "* In classical physics (=all we care about in this course), a \"microstate\" is a specific microscopic configuration of all particles of the system.\n",
         "* All \"allowed\" microstates have the same energy, volume and number (and type) of particles.\n"
       ],
       "metadata": {
-        "id": "P40p-MSr3O4s"
+        "id": "HMKnKeDn2EVq"
       }
     },
     {
@@ -94,7 +87,7 @@
       "source": [
         "### Energy exchange -- canonical ensemble\n",
         "\n",
-        "Most soft matter systems are closed but not isolated - they trade energy and volume with the environment (a.k.a. *bath*, *sorroundings*). What can we say about $P(\\nu_S)$ in those cases?"
+        "Most soft matter systems are closed but not isolated - they trade energy and volume with the environment (a.k.a. *bath*, *sorroundings*). What can we say about $P(\\nu_s)$ in those cases?"
       ],
       "metadata": {
         "id": "Oa8wy2MzbAGP"
@@ -103,10 +96,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "System (S) + Bath (B) = Composite system with fixed E, V, N.\n",
+        "System (s) + Bath (b) = Composite system with fixed E, V, N.\n",
         "\n",
-        "* All states with $E_S+E_B=E$ are equally likely.\n",
-        "* To reach a high energy state, S has to \"steal\" energy from B."
+        "* All states with $E_s+E_b=E$ are equally likely.\n",
+        "* To reach a high energy state, s has to \"steal\" energy from b.\n",
+        "What's the probability $P(\\nu_s)$ of system state $\\nu_s$ irrespective of the state of the bath? \n",
+        "$$P(\\nu_s)=\\sum_{\\nu_b} P(\\nu_s,\\nu_b)=\\frac{\\Omega_b(E-E_s)}{\\Omega(E,V,N)}$$\n",
+        "$$\\boxed{\\rightarrow P(\\nu_s)\\propto \\Omega_b(E-E_s)}$$\n",
+        "**The multiplicity of the bath controls the state of the system.**\n"
       ],
       "metadata": {
         "id": "CwOgjx6gcIou"
@@ -115,36 +112,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "What's the probability $P(\\nu_S)$ of system state $\\nu_S$ irrespective of the state of the bath? "
-      ],
-      "metadata": {
-        "id": "maSb338UcsNd"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$$P(\\nu_S)=\\sum_{\\nu_B} P(\\nu_S,\\nu_B)=\\frac{\\Omega_b(E-E_S)}{\\Omega(E,V,N)}$$"
-      ],
-      "metadata": {
-        "id": "JNx94hvGc4df"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "$$\\boxed{\\rightarrow P(\\nu_S)\\propto \\Omega_b(E-E_S)}$$\n",
-        "**The multiplicity of the bath controls the state of the system.**\n"
-      ],
-      "metadata": {
-        "id": "vuPxuGb_ezxc"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Or, using the **Boltzmann entropy** $$ S\\equiv k_B \\ln \\Omega,$$\n",
-        "we can write $$P(\\nu_S)\\propto e^{k_B^{-1}S_B(E-E_S)}.$$"
+        "we can write $$P(\\nu_s)\\propto e^{k_B^{-1}S_b(E-E_s)}.$$\n",
+        "When the bath is very big (thermodynamic limit), we can Taylor expand the exponent,\n",
+        "$$ S_s(E-E_s)=S_b(E)+\\left(\\frac{\\partial S}{\\partial E}\\right)_{V,N}(-E_s)+\\cdots $$\n",
+        "Inserting above yields $$\\boxed{P(\\nu_s)\\propto \\exp\\left[\\text{const.}-k_B^{-1}\\left(\\frac{\\partial S_b}{\\partial E}\\right)_{V, N}\\right]\\propto e^{-b E_s}} .$$"
       ],
       "metadata": {
         "id": "oCe_sGpfhKHx"
@@ -153,30 +125,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "When the bath is very big (thermodynamic limit), we can Taylor expand the exponent,\n",
-        "$$ S_B(E-E_S)=S_B(E)+\\left(\\frac{\\partial S}{\\partial E}\\right)_{V,N}(-E_S)+\\cdots $$"
-      ],
-      "metadata": {
-        "id": "5Djwy4nzh5YD"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Inserting above yields $$\\boxed{P(\\nu_S)\\propto \\exp\\left[\\text{const.}-k_B^{-1}\\left(\\frac{\\partial S_B}{\\partial E}\\right)_{V, N}\\right]\\propto e^{-b E_S}} .$$"
-      ],
-      "metadata": {
-        "id": "XNZSNO8MmKnJ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "The factor $e^{-b E_S}$ is the **Boltzmann factor**, if we identify $b$ and $\\beta_B\\equiv (k_B T)^{-1}$. \n",
+        "The factor $e^{-b E_s}$ is the **Boltzmann factor**, if we identify $b$ and $\\beta_b\\equiv (k_B T)^{-1}$. \n",
         "\n",
-        "Thus, $$\\beta_B\\equiv \\left(\\frac{\\partial \\ln \\Omega_B}{\\partial E}\\right)_{V, N}=\\frac 1k_B \\left(\\frac{\\partial S_B}{\\partial E}\\right)_{V, N}.$$\n",
+        "Thus, $$\\beta_b\\equiv \\left(\\frac{\\partial \\ln \\Omega_b}{\\partial E}\\right)_{V, N}=\\frac 1k_B \\left(\\frac{\\partial S_b}{\\partial E}\\right)_{V, N}.$$\n",
         "\n",
-        "Equivalently, $$\\boxed{T_B\\equiv \\left(\\frac{\\partial S_B}{\\partial E}\\right)_{V, N}^{-1}}$$ is the **thermodynamic definition** of the temperature of the bath."
+        "Equivalently, $$\\boxed{T_b\\equiv \\left(\\frac{\\partial S_b}{\\partial E}\\right)_{V, N}^{-1}}$$ is the **thermodynamic definition** of the temperature of the bath."
       ],
       "metadata": {
         "id": "d7P92EfznDKX"
@@ -186,9 +139,9 @@
       "cell_type": "markdown",
       "source": [
         "**Implication: The likelihood ratio of two microstates is given by the ratio of their Boltzmann factors**\n",
-        "$$\\frac{P(\\nu_s^{(1)})}{P(\\nu_s^{(2)})}=e^{-\\frac{E_S^{(2)}-E_S^{(1)}}{k_B T_b}}=e^{-\\frac{\\Delta E}{k_B T_b}}$$\n",
+        "$$\\frac{P(\\nu_s^{(1)})}{P(\\nu_s^{(2)})}=e^{-\\frac{E_s^{(2)}-E_s^{(1)}}{k_B T_b}}=e^{-\\frac{\\Delta E}{k_B T_b}}$$\n",
         "\n",
-        "Exercise: Compare $k_B T$ with characteristic energy scales. \n",
+        "Exercise: Compare $k_B T_b$ with characteristic energy scales. \n",
         "* E.g. potential energy differences due to gravity, $\\Delta E = m g h$, imply\n",
         "  $$\\frac{P(\\nu_s^{(1)})}{P(\\nu_s^{(2)})}=e^{-\\frac{h}{\\lambda}}, \\qquad \\text{in terms of the \"scale height\"} \\lambda\\equiv \\frac{k_B T}{m g}\\approx 8 \\text{km}.$$\n",
         "\n",
@@ -199,6 +152,15 @@
       "metadata": {
         "id": "b-3pU6kUSqqw"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DgRwzR-B1H1c"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
