--- a/docs/notebooks/L2/Intro_to_Stat_Phys_2_OH.ipynb
+++ b/docs/notebooks/L2/Intro_to_Stat_Phys_2_OH.ipynb
@@ -115,6 +115,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the next section, we will see that the free energy attains a minmum at equilbrium. The above expression shows that $A$ can be lowered either by lowering the energy or by increasing the entropy. **The tradeoff between lowering energy (more states for the environment) and increasing entropy (more states for the system) is a recurrent theme in statistical physics.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
