--- a/source/notebooks/L4/2_Gibbs_Distribution.ipynb
+++ b/source/notebooks/L4/2_Gibbs_Distribution.ipynb
@@ -11,21 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far, we have considered closed systems and derived and studied the Boltzmann distribution.  Now our systems are open and the particle number might change. To derive the probability to find a system with an energy $E_\\mathrm{s}$ and a particle number $N_\\mathrm{s}$, we retrace the steps that led us to the Boltzmann distribution, except for allowing the system to trade particles with the bath.  "
+    "So far, we have considered closed systems and derived and studied the Boltzmann distribution.  Now our systems are open and the particle number might change. To derive the microstate probability distribution, we retrace the steps that led us to the Boltzmann distribution, except for allowing the system to trade particles with the bath.  \n",
+    "<div>\n",
+    "<img src=\"img/open_system.png\" width=\"300\"/>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, the probability to find a system with  energy $E_\\mathrm{s}$ and particle number $N_\\mathrm{s}$ is proportional to the number of bath states,\n",
+    "The probability to find a system in a given microstate $\\nu_s$, in which the system has energy $E_\\mathrm{s}$ and  $N_\\mathrm{s}$ particeles, is proportional to the number of available bath states,\n",
     "$$P(\\nu_s)\\propto e^{k_\\mathrm{B}^{-1}S_b(E-E_s,N-N_s)}\\;.$$\n",
     "Next we Taylor expand the entropy of the large bath,\n",
     "$$k_\\mathrm{B}^{-1}S_b(E-E_s,N-N_s)=\\mathrm{const.}-\\beta_b(E_s-\\mu_b N_s)\\;,$$\n",
     "where we have the usual thermodynamic definition of temperature\n",
-    "$$T_b^{-1}=\\frac{\\partial S_b}{\\partial E}$$\n",
+    "$$T_b^{-1}\\equiv\\frac{\\partial S_b}{\\partial E}$$\n",
     "and introduced the **chemical potential**\n",
-    "$$\\mu_b=-T_b \\frac{\\partial S_b}{\\partial N}\\;.$$\n",
+    "$$\\mu_b\\equiv-T_b \\frac{\\partial S_b}{\\partial N}\\;.$$\n",
+    "The chemical potential can be interpreted as the free energy added to the system when we inject one particle into the system.\n",
+    "\n",
     "With these definitions, we obtain the **Gibbs distribution**\n",
     "$$P(\\nu_s)=Z^{-1}e^{-\\beta_b\\left[E_s-\\mu_b N_s\\right]}$$\n",
     "where the grand canonical partition function $Z$ is given by the sum\n",
@@ -37,14 +42,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To obtain the probability to find the system at energy $E_s$ and $N_s$, we have multiply the Gibbs distribution with the multiplicity of system states,\n",
+    "To obtain the probability to find the system in *any one* of the states with energy $E_s$ and particle number $N_s$, we have to multiply the Gibbs distribution with the multiplicity of system states,\n",
     "$$P(E_s,N_s)\\propto e^{k_\\mathrm{B}^{-1}S_s(E_s,N_s)}e^{-\\beta_b\\left[E_s-\\mu_b N_s\\right]}\\;.$$\n",
     "If the system is large, this distribution has a pronounced peak, such that the system will have an almost deterministic energy $U$ and particle number $N$. The conditions for the maximum imply \n",
     "$$T_b=T_s\\qquad \\mu_b=\\mu_s\\;.$$\n",
     "Thus, temperatures and chemical potentials of bath and system are equal at equilibrium. \n",
     "\n",
     "Consideration of spontaneous processes shows that the equilibrium minimizes the grand potential\n",
-    "$$\\Sigma=-k_\\mathrm{B}T\\ln Z=U-T S- \\mu N$$."
+    "$$\\Sigma=-k_\\mathrm{B}T\\ln Z=U-T S- \\mu N.$$"
    ]
   },
   {
@@ -73,57 +78,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\">\n",
-    "    \n",
-    "**Ligand Binding**    \n",
-    "\n",
-    "As an example, we have a look at the binding of a ligand (green) to a receptor, which is indicated in the figure below.\n",
-    "    \n",
-    "![Two State Binding](img/two_state_binding.png)\n",
-    "\n",
-    "The binding is reported by the variable $\\sigma$, which can be either 0 or 1. The binding energy is therefore \n",
-    "    \n",
-    "\\begin{equation}\n",
-    "E=\\sigma \\varepsilon_\\mathrm{b}\n",
-    "\\end{equation}\n",
-    "\n",
-    "with $\\varepsilon_\\mathrm{b}<0$, since the ligand wants to bind. The grand partition function\n",
-    "    \n",
-    "\\begin{equation}    \n",
-    "Z=\\sum_{\\rm states}\\exp\\left ( -\\beta (E_{\\rm state}- \\mu N_{\\rm state}) \\right ),\n",
-    "\\end{equation}\n",
-    "\n",
-    "\n",
-    "in which the chemical potential $\\mu$ reflects the contact with the particle reservoir and $\\beta=(k_\\mathrm{B}T)^{-1}$, can therefore be written as:\n",
-    "    \n",
-    "\\begin{equation}    \n",
-    "Z=\\sum_{\\sigma=0}^{1}\\exp\\left ( -\\beta (\\varepsilon_\\mathrm{b} \\sigma- \\mu \\sigma) \\right )=1+\\exp(-\\beta (\\varepsilon_\\mathrm{b} -\\mu )).\n",
-    "\\end{equation}\n",
-    "\n",
-    "From that we can calculate the mean number of bounded ligands to be\n",
-    "    \n",
-    "\\begin{equation}    \n",
-    "\\langle N \\rangle =\\frac{\\exp(-\\beta (\\varepsilon_\\mathrm{b} -\\mu ))}{1+\\exp(-\\beta (\\varepsilon_\\mathrm{b} -\\mu ))}.\n",
-    "\\end{equation}  \n",
-    "    \n",
-    "Using \n",
-    "    \n",
-    "\\begin{equation}\n",
-    "\\mu = \\mu_0 + k_\\mathrm{B} T \\ln \\left ( \\frac{c}{c_0}\\right )\n",
-    "\\end{equation}\n",
-    "    \n",
-    "we can finally write \n",
-    "    \n",
-    " \\begin{equation}    \n",
-    "\\langle N \\rangle =\\frac{c/c_0 \\exp(-\\beta \\Delta \\varepsilon_\\mathrm{b})}{1+\\frac{c}{c_0}\\exp(-\\beta \\Delta \\varepsilon_\\mathrm{b})}\n",
-    "\\end{equation}    \n",
-    "    \n",
-    "with $\\Delta \\varepsilon_\\mathrm{b}=\\varepsilon_\\mathrm{b}-\\mu_0$, which is the energy freed when taking the ligand from the solution and placing it at the acceptor.    \n",
-    "</div>    "
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
