--- a/docs/notebooks/L4/2_Chemical_Potential.ipynb
+++ b/docs/notebooks/L4/2_Chemical_Potential.ipynb
@@ -75,22 +75,16 @@
     "The last term $TS_{\\rm mix}$ denotes the entropy for mixing the solute and the solvent molecules.     \n",
     "In the following, we are interested in the last term, which is the entropic contribution to the free energy containing the entropy of mixing solute and solvent.\n",
     "\n",
-    "The mixing entropy can be calculated by either the Gibbs definition\n",
+    "We compute the mixing entropy directly from the Boltzmann entropy\n",
     "\n",
     "\\begin{equation}\n",
-    "S_{\\rm mix}=-k_{\\rm B}\\sum_{i}p_{i}\\ln(p_{i})\n",
-    "\\end{equation}\n",
-    "\n",
-    "or the Boltzmann definition\n",
-    "\n",
-    "\\begin{equation}\n",
-    "S_{\\rm mix}=k_{\\rm B}\\ln(W).\n",
+    "S_{\\rm mix}=k_{\\rm B}\\ln(\\Omega).\n",
     "\\end{equation}\n",
     "\n",
     "We will use the latter definition including the number of possible configurations to obtain the mixing entropy. If the total number of molecules in the volume is $N=N_{\\rm H_2O}+N_{\\rm s}$, we can write down the number of different ways to arrange the molecules as previously done. We obtain:\n",
     "    \n",
     "\\begin{equation}\n",
-    "W(N_{\\rm H_2O}, N_{\\rm s} )=\\frac{N!}{N_{\\rm H_2O}! N_{\\rm s}!}.\n",
+    "\\Omega(N_{\\rm H_2O}, N_{\\rm s} )=\\frac{N!}{N_{\\rm H_2O}! N_{\\rm s}!}.\n",
     "\\end{equation}\n",
     "    \n",
     "\n",
