--- a/docs/notebooks/L4/2_Chemical_Potential.ipynb
+++ b/docs/notebooks/L4/2_Chemical_Potential.ipynb
@@ -121,22 +121,31 @@
     "G_{\\rm tot}=N_{\\rm{H_{2}O}}\\varepsilon_{\\rm H_{2}O}+N_{\\rm s}\\varepsilon_{\\rm s}+k_\\mathrm{B} T \\left ( N_{\\rm s} \\ln \\left ( \\frac{N_{\\rm s}}{N_{\\rm H_2O}}\\right) -N_{\\rm s}\\right ).\n",
     "\\end{equation}\n",
     "\n",
-    "We can now come back and calculate the chemical potential of the solute as noted above \n",
-    "    \n",
-    "    \n",
+    "We can now come back and calculate the chemical potential of the solute as noted above     \n",
     "\\begin{equation}\n",
-    "\\mu_{\\rm s}=\\epsilon_{\\rm s}+k_{\\rm B} T \\ln \\left ( \\frac{N_{\\rm s}}{N_{\\rm H_2O}}\\right ).\n",
+    "\\mu_{\\rm s}=\\left( \\frac{\\partial G_{\\rm tot}}{\\partial N_{\\rm s}}\\right)\\bigg|_{p,T}=\\epsilon_{\\rm s}+k_{\\rm B} T \\ln \\left ( \\frac{N_{\\rm s}}{N_{\\rm H_2O}}\\right ).\n",
     "\\end{equation}\n",
-    "    \n",
+    "\n",
+    "To get the chemical potential of the solvent one has to take the derivative with respect to $N_{\\rm H_2O}$,\n",
+    "\\begin{equation}    \n",
+    "\\mu_{\\rm H_2O}=\\left(\\frac{\\partial G_{\\rm tot}}{\\partial N_{\\rm H_2O}}\\right)\\bigg|_{T,p}=\\epsilon_{\\rm H_2O}-k_{\\rm B} T \\frac{N_{\\rm s}}{N_{\\rm H_2O}}.\n",
+    "\\end{equation} \n",
+    "\n",
     "As we rather work with concentrations than number of molecules we can use $c=N_{\\rm s}/V$ and $c_0=c_{\\rm H_2O}=N_{\\rm H_2O}/V$  to write\n",
     "    \n",
     "\\begin{equation}\n",
     "\\mu_{\\rm s}=\\epsilon_{\\rm s}+k_{\\rm B} T \\ln \\left ( \\frac{c}{c_0}\\right ).\n",
     "\\end{equation}    \n",
+    "\\begin{equation}\n",
+    "\\mu_{\\rm H_2O}=\\epsilon_{\\rm H_2O}-k_{\\rm B} T \\frac{c}{c_0}.\n",
+    "\\end{equation}    \n",
     "    \n",
     "    \n",
     "The value of $c_0$ thereby acts as a reference point, which is commonly chosen to be at $c_0=1\\,{\\rm M}$. The value of $\\epsilon_{\\rm s}$ is termed the standard chemical potential $\\mu_{\\rm s}^{0}$.\n",
     "The standard chemical potential is measured at standard thermodynamic conditions, i.e. $p_0=101.3\\, {\\rm kPa}$ and $T=293.15\\, {\\rm K}$, and $c_0=1\\, {\\rm M}$. \n",
+    "    \n",
+    "** Remember: The chemical potential of the minority phase (solutes) has a *logarithimc* dependence on the concentration of solutes. The dependence is instead *linear* in the case of the majority phase (solvent).**\n",
+    "    \n",
     "    \n",
     "</div>    "
    ]
@@ -160,7 +169,7 @@
     "\n",
     "\n",
     "    \n",
-    "For a solvent we consequently write\n",
+    "To get the chemical potential of the solvent one has to take the derivative with respect to $N_{\\rm H_2O}$,\n",
     "    \n",
     "\\begin{equation}    \n",
     "\\mu_{\\rm H_2O}=\\frac{\\partial G_{\\rm tot}}{\\partial N_{\\rm H_2O}}\\bigg|_{T,p}=\\mu_{\\rm H_2O}^{0}-k_\\mathrm{B} T\\ln\\left ( \\frac{c_{\\rm s}}{c_{\\rm H_2O}}\\right).\n",
