--- a/docs/notebooks/L9/1_Electric_Double_Layer.ipynb
+++ b/docs/notebooks/L9/1_Electric_Double_Layer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "62208bcd",
+   "id": "91606bbf",
    "metadata": {},
    "source": [
     "# Electric Double Layer"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "2fe163e9",
+   "id": "c1265144",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9d3e5fa",
+   "id": "c3905a9c",
    "metadata": {},
    "source": [
     "## Charges surfaces in solution, no salt\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7818e66",
+   "id": "e42912bb",
    "metadata": {},
    "source": [
     "## Poisson-Boltzmann equation"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c3fefb",
+   "id": "4ad9398c",
    "metadata": {},
    "source": [
     "If we name the electrostatic potential $\\psi$ and number density of ions of a valancy $z$ $\\rho$, we can on one side write down the Boltzmann equation\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "348580e0",
+   "id": "2447a576",
    "metadata": {},
    "source": [
     "In the following we would like to determine the surface values for the potential $\\psi_s$, the electric field $E_s$ and the density $\\rho_s$, which are called contact values. We will do that for a system of two solid surfaces each with a surface charge density $\\sigma$ according to the configuration shown below.\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdfc04c2-a58f-4ea5-8cfe-83de1b7f7a5d",
+   "id": "529f695e",
    "metadata": {},
    "source": [
     "The term $\\frac{d\\psi}{dx}$, which appears as a square in the last formula is just the electric field evaluated at the position $x$. With the contact value of the electric field $E_s$ obtained above, we can immediately write the contact value of the charge number density as \n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2104afe3-f0ab-44e9-a1cc-b5ac8e77e495",
+   "id": "2a612792",
    "metadata": {},
    "source": [
     "To obtain the charge number density, the potential and the electric field we must solve the Poisson Boltzmann equation. The solution in the case of no additional electrolyte is given by\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ba96cf3-e294-465c-8e0c-7fe923e8c59a",
+   "id": "73f5b01e",
    "metadata": {},
    "source": [
     "### Example"
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d526a520",
+   "id": "fc26163e",
    "metadata": {},
    "source": [
     "Two surfaces with a charge density of $\\sigma=0.2\\, C\\cdot m^{-2}$ are at a distance of $D=2 nm$ in water at $T=293\\,K$. We calculate the counter ion surface charge, the charge density, the electric field and the potential inside the water film between the two layers. We therefore first calculate a value of\n",
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "id": "cadcc451",
+   "id": "b8e5f24c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1729c572-e684-4531-8655-231e6cde63f8",
+   "id": "0694bd02",
    "metadata": {},
    "source": [
     "With the help of the previous definitions, we may search for the solution which gives the value of $K$."
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "e609831b",
+   "id": "f2e7c7f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "362b2286-2464-417b-ac1b-9c88e9ac7524",
+   "id": "e98d1e91",
    "metadata": {},
    "source": [
     "#### Plot of the charge density"
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "f5559668",
+   "id": "72b05f35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "id": "791597e6",
+   "id": "624f364e",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e585448b-4e90-4d94-9902-f9d638c2cded",
+   "id": "fd28b775",
    "metadata": {},
    "source": [
     "#### Plot of the electric potential"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "1805cf4e",
+   "id": "014f75a8",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86ad735a-9b6b-4f39-8d73-3a8044a99bcf",
+   "id": "c958f13b",
    "metadata": {},
    "source": [
     "#### Plot of the electric field"
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "dd90876b",
+   "id": "ddbdbf4e",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f062487-176c-41fe-b578-d4f45ccb8076",
+   "id": "ee937226",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -402,7 +402,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -416,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
